ifcc-test-output/testfiles-TestsOK-Invalid-11_using_undeclared_variable_3/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:5: error: ‘b’ undeclared (first use in this function)
    3 |     b = a;
      |     ^
input.c:3:5: note: each undeclared identifier is reported only once for each function it appears in

exit status: 1
